--- a/dashboard.html
+++ b/dashboard.html
@@ -32,8 +32,8 @@
 
         <section id="account-details">
             <h2>Account Details</h2>
-            <p>Name: John Doe</p>
-            <p>Email: john.doe@example.com</p>
+            <p>Name: ika</p>
+            <p>Email: ikaa@example.com</p>
         </section>
     </main>
 
